# ecological-agents

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/ecological-agents-experiment-runner/: SKILL.md
.agents/skills/ecological-agents-experiment-runner/agents/: openai.yaml
.agents/skills/ecological-agents-experiment-runner/references/: runtime-checklist.md
.agents/skills/ecological-agents-metrics-analysis/: SKILL.md
.agents/skills/ecological-agents-metrics-analysis/agents/: openai.yaml
.agents/skills/ecological-agents-metrics-analysis/references/: analysis-playbook.md
.agents/skills/ecological-agents-metrics-analysis/scripts/: summarize_metrics.py
.agents/skills/ecological-agents-schema-migrations/: SKILL.md
.agents/skills/ecological-agents-schema-migrations/agents/: openai.yaml
flyway/: flyway.conf
migrations/: V1__init_schema.sql  V2__append_only_guards.sql  V3__epistemic_survival.sql  V4__ecological_agents.sql
src/lab_sim/: __init__.py
src/lab_sim/agents/: cognition.py
src/lab_sim/config/: settings.py
src/lab_sim/db/: connection.py  repository.py
src/lab_sim/engine/: __init__.py  tick_engine.py
src/lab_sim/experiments/: run_experiments.py  runner.py
src/lab_sim/llm/: ollama_adapter.py
src/lab_sim/memory/: vector_memory.py
src/lab_sim/metrics/: __init__.py  engine.py
src/lab_sim/trust/: __init__.py  system.py
src/lab_sim/utils/: types.py
src/lab_sim/world/: __init__.py  simulator.py
(+1 files in other folders)
